Testing Mapping and Persistence