@@ -1,24 +1,25 @@
 package org.emerald.apifirst.apifirstserver.boostrap;
 
 import lombok.RequiredArgsConstructor;
+import org.emerald.apifirst.apifirstserver.domain.Address;
+import org.emerald.apifirst.apifirstserver.domain.Category;
+import org.emerald.apifirst.apifirstserver.domain.Customer;
+import org.emerald.apifirst.apifirstserver.domain.Dimension;
+import org.emerald.apifirst.apifirstserver.domain.Image;
+import org.emerald.apifirst.apifirstserver.domain.Name;
+import org.emerald.apifirst.apifirstserver.domain.Order;
+import org.emerald.apifirst.apifirstserver.domain.OrderLine;
+import org.emerald.apifirst.apifirstserver.domain.OrderStatusEnum;
+import org.emerald.apifirst.apifirstserver.domain.PaymentMethod;
+import org.emerald.apifirst.apifirstserver.domain.Product;
+import org.emerald.apifirst.apifirstserver.repositories.CategoryRepository;
 import org.emerald.apifirst.apifirstserver.repositories.CustomerRepository;
 import org.emerald.apifirst.apifirstserver.repositories.OrderRepository;
 import org.emerald.apifirst.apifirstserver.repositories.ProductRepository;
-import org.emerald.apifirst.model.AddressDto;
-import org.emerald.apifirst.model.CategoryDto;
-import org.emerald.apifirst.model.CustomerDto;
-import org.emerald.apifirst.model.DimensionsDto;
-import org.emerald.apifirst.model.ImageDto;
-import org.emerald.apifirst.model.NameDto;
-import org.emerald.apifirst.model.OrderCustomerDto;
-import org.emerald.apifirst.model.OrderDto;
-import org.emerald.apifirst.model.OrderLineDto;
-import org.emerald.apifirst.model.OrderProductDto;
-import org.emerald.apifirst.model.PaymentMethodDto;
-import org.emerald.apifirst.model.ProductDto;
 import org.springframework.boot.CommandLineRunner;
 import org.springframework.stereotype.Component;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Component
@@ -28,160 +29,140 @@ public class DataLoader implements CommandLineRunner {
     private final CustomerRepository customerRepository;
     private final ProductRepository productRepository;
     private final OrderRepository orderRepository;
+    private final CategoryRepository categoryRepository;
 
     @Override
     public void run(String... args) throws Exception {
 
-        AddressDto address1 = AddressDto.builder()
+        Category electronics = categoryRepository.save(Category.builder()
+                .category("Electronics")
+                .description("Electronics")
+                .categoryCode("ELECTRONICS")
+                .build());
+
+        Category clothing = categoryRepository.save(Category.builder()
+                .category("Clothing")
+                .description("Clothing")
+                .categoryCode("CLOTHING")
+                .build());
+
+        Category dryGoods = categoryRepository.save(Category.builder()
+                .category("Dry Goods")
+                .description("Dry Goods")
+                .categoryCode("DRYGOODS")
+                .build());
+
+        Address address1 = Address.builder()
                 .addressLine1("1234 W Some Street")
                 .city("Some City")
                 .state("FL")
                 .zip("33701")
                 .build();
 
-        CustomerDto customer1 = CustomerDto.builder()
-                .name(NameDto.builder()
+        Customer customer1 = Customer.builder()
+                .name(Name.builder()
                         .firstName("John")
                         .lastName("Thompson")
                         .build())
-                .billToAddress(address1)
-                .shipToAddress(address1)
+                .billingAddress(address1)
+                .shippingAddress(address1)
                 .email("john@springframework.guru")
                 .phone("800-555-1212")
-                .paymentMethods(List.of(PaymentMethodDto.builder()
+                .paymentMethods(List.of(PaymentMethod.builder()
                         .displayName("My Card")
                         .cardNumber(12341234)
                         .expiryMonth(12)
-                        .expiryYear(26)
-                        .cvv(123)
                         .build()))
                 .build();
 
-        AddressDto address2 = AddressDto.builder()
+        Address address2 = Address.builder()
                 .addressLine1("1234 W Some Street")
                 .city("Some City")
                 .state("FL")
                 .zip("33701")
                 .build();
 
-        CustomerDto customer2 = CustomerDto.builder()
-                .name(NameDto.builder()
+        Customer customer2 = Customer.builder()
+                .name(Name.builder()
                         .firstName("Jim")
                         .lastName("Smith")
                         .build())
-                .billToAddress(address2)
-                .shipToAddress(address2)
+                .billingAddress(address2)
+                .shippingAddress(address2)
                 .email("jim@springframework.guru")
                 .phone("800-555-1212")
-                .paymentMethods(List.of(PaymentMethodDto.builder()
+                .paymentMethods(List.of(PaymentMethod.builder()
                         .displayName("My Other Card")
                         .cardNumber(1234888)
                         .expiryMonth(12)
-                        .expiryYear(26)
-                        .cvv(456)
                         .build()))
                 .build();
 
-        CustomerDto savedCustomer1 = customerRepository.save(customer1);
-        CustomerDto savedCustomer2 = customerRepository.save(customer2);
+        Customer savedCustomer1 = customerRepository.save(customer1);
+        Customer savedCustomer2 = customerRepository.save(customer2);
 
-        ProductDto product1 = ProductDto.builder()
+        Product product1 = Product.builder()
                 .description("Product 1")
-                .categories(List.of(CategoryDto.builder()
-                        .category("Category 1")
-                        .description("Category 1 Description")
-                        .build()))
+                .categories(Arrays.asList(dryGoods))
                 .cost("12.99")
                 .price("14.99")
-                .dimensions(DimensionsDto.builder()
+                .dimension(Dimension.builder()
                         .height(1)
                         .length(2)
                         .width(3)
                         .build())
-                .images(List.of(ImageDto.builder()
+                .images(List.of(Image.builder()
                         .url("http://example.com/image1")
                         .altText("Image 1")
                         .build()))
                 .build();
 
-        ProductDto product2 = ProductDto.builder()
+        Product product2 = Product.builder()
                 .description("Product 2")
-                .categories(List.of(CategoryDto.builder()
-                        .category("Category 2")
-                        .description("Category 2 Description")
-                        .build()))
+                .categories(Arrays.asList(electronics))
                 .cost("12.99")
                 .price("14.99")
-                .dimensions(DimensionsDto.builder()
+                .dimension(Dimension.builder()
                         .height(1)
                         .length(2)
                         .width(3)
                         .build())
-                .images(List.of(ImageDto.builder()
+                .images(List.of(Image.builder()
                         .url("http://example.com/image2")
                         .altText("Image 2")
                         .build()))
                 .build();
 
-        ProductDto savedProduct1 = productRepository.save(product1);
-        ProductDto savedProduct2 = productRepository.save(product2);
+        Product savedProduct1 = productRepository.save(product1);
+        Product savedProduct2 = productRepository.save(product2);
 
-        OrderDto order1 = OrderDto.builder()
-                .customer(OrderCustomerDto.builder()
-                        .id(savedCustomer1.getId())
-                        .name(savedCustomer1.getName())
-                        .billToAddress(savedCustomer1.getBillToAddress())
-                        .shipToAddress(savedCustomer1.getShipToAddress())
-                        .phone(savedCustomer1.getPhone())
-                        .selectedPaymentMethod(savedCustomer1.getPaymentMethods().get(0))
-                        .build())
-                .orderStatus(OrderDto.OrderStatusEnum.NEW)
+        Order order1 = Order.builder()
+                .customer(savedCustomer1)
+                .orderStatus(OrderStatusEnum.NEW)
                 .shipmentInfo("shipment info")
-                .orderLines(List.of(OrderLineDto.builder()
-                                .product(OrderProductDto.builder()
-                                        .id(savedProduct1.getId())
-                                        .description(product1.getDescription())
-                                        .price(product1.getPrice())
-                                        .build())
+                .orderLines(List.of(OrderLine.builder()
+                                .product(product1)
                                 .orderQuantity(1)
                                 .shipQuantity(1)
                                 .build(),
-                        OrderLineDto.builder()
-                                .product(OrderProductDto.builder()
-                                        .id(savedProduct2.getId())
-                                        .description(product2.getDescription())
-                                        .price(product1.getPrice())
-                                        .build())
+                        OrderLine.builder()
+                                .product(savedProduct1)
                                 .orderQuantity(1)
                                 .shipQuantity(1)
                                 .build()))
                 .build();
 
-        OrderDto order2 = OrderDto.builder()
-                .customer(OrderCustomerDto.builder()
-                        .id(savedCustomer2.getId())
-                        .billToAddress(savedCustomer2.getBillToAddress())
-                        .shipToAddress(savedCustomer2.getShipToAddress())
-                        .phone(savedCustomer2.getPhone())
-                        .selectedPaymentMethod(savedCustomer2.getPaymentMethods().get(0))
-                        .build())
-                .orderStatus(OrderDto.OrderStatusEnum.NEW)
+        Order order2 = Order.builder()
+                .customer(savedCustomer2)
+                .orderStatus(OrderStatusEnum.NEW)
                 .shipmentInfo("shipment info #2")
-                .orderLines(List.of(OrderLineDto.builder()
-                                .product(OrderProductDto.builder()
-                                        .id(savedProduct1.getId())
-                                        .description(product1.getDescription())
-                                        .price(product1.getPrice())
-                                        .build())
+                .orderLines(List.of(OrderLine.builder()
+                                .product(savedProduct2)
                                 .orderQuantity(1)
                                 .shipQuantity(1)
                                 .build(),
-                        OrderLineDto.builder()
-                                .product(OrderProductDto.builder()
-                                        .id(savedProduct2.getId())
-                                        .description(product2.getDescription())
-                                        .price(product1.getPrice())
-                                        .build())
+                        OrderLine.builder()
+                                .product(product2)
                                 .orderQuantity(1)
                                 .shipQuantity(1)
                                 .build()))
